<resources>
    <string name="app_name">Pop4u</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ordered_fragment">Đã đặt</string>
    <string name="processing_fragment">Đang xử lý</string>
    <string name="successful_order_fragment">Thành công</string>
    <string name="canceled_order_fragment">Đã hủy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_all_button_content">Xem</string>
    <string name="home_title">Trang chủ</string>
    <string name="search_title">Tìm kiếm</string>
    <string name="cart_title">Giỏ hàng</string>
    <string name="account_title">Tài khoản</string>
    <string name="home_title_sub_head1">Mới ra mắt</string>
    <string name="home_title_sub_head2">Sale</string>
    <string name="home_title_sub_head3">Nghệ sĩ nổi bật</string>
    <string name="no_favorite_product">Hiện tại bạn chưa có sản phẩm nào nằm trong danh sách yêu thích.</string>
    <string name="home_title_sub_head4">Đề xuất</string>
    <string name="action_bar_favorite_action">Sản phẩm yêu thích</string>
    <string name="action_bar_order_action">Đơn hàng của tôi</string>
    <string name="product_of_week_title">Có Gì Tuần Này 😎</string>
    <string name="filter_product">Lọc sản phẩm</string>
    <string name="undo">Hoàn tác</string>
    <string name="option_heading">Phân loại</string>
    <string name="amount_heading">Số lượng</string>
    <string name="up_amount">Tăng số lượng</string>
    <string name="down_amount">Giảm số lượng</string>
    <string name="delete_favorite_noti">Bạn đã bỏ sản phẩm khỏi danh sách yêu thích.</string>
    <string name="add_favorite_noti">Bạn thêm sản phẩm vào danh sách yêu thích.</string>
    <string name="filter_artist">Lọc nghệ sĩ</string>
    <string name="sort_by">Sắp xếp theo</string>
    <string name="sort_by_as_price">Giá tăng dần</string>
    <string name="sort_by_de_price">Giá giảm dần</string>
    <string name="filter_by_price_range">Khoảng giá</string>
    <string name="filter_by_category">Danh mục</string>
    <string name="filter_by_tag">Thẻ sản phẩm</string>
    <string name="filter_by_tag_sale">Đang giảm giá</string>
    <string name="filter_by_tag_featured">Nổi bật</string>
    <string name="filter_by_tag_new">Mới ra mắt</string>
    <string name="filter_by_tag_hot">Bán chạy</string>
    <string name="filter_by_year_release">Năm ra mắt</string>
    <string name="slide_year_description">Chọn khoản thời gian năm</string>
    <string name="price_under_500K">Dưới 500N</string>
    <string name="price_under_1M">Từ 500N - 1TR</string>
    <string name="price_under_1_5M">Từ 1TR - 1.5TR</string>
    <string name="price_under_2M">Từ 1.5TR - 2TR</string>
    <string name="price_over_2M">Trên 2TR</string>
    <string name="apply_filter">Áp dụng</string>
    <string name="reset_filter">Reset</string>
    <string name="total_price">Tổng cộng</string>
    <string name="select_all">Chọn tất cả</string>
    <string name="range_year_debut">Khoảng năm ra mắt</string>
    <string name="sort_by_as_year_debut">Ra mắt mới nhất</string>
    <string name="sort_by_ade_year_debut">Ra mắt cũ nhất</string>
    <string name="btn_open_cart">Mở giỏ hàng</string>
    <string name="btn_share">Chia sẻ</string>
    <string name="add_to_cart">Thêm vào giỏ</string>
    <string name="buy_now">Mua ngay</string>
    <string name="cancel">Hủy</string>
    <string name="view_cart">Xem giỏ hàng</string>
    <string name="product_in_order_head">Sản phẩm trong đơn hàng</string>
    <string name="voucher">Mã giảm giá</string>
    <string name="change">Thay đổi</string>
    <string name="payment_head">Thanh toán</string>
    <string name="payment_method_head">Phương thức thanh toán</string>
    <string name="cod">Thanh toán khi nhận hàng (COD)</string>
    <string name="napas">Thanh toán qua thẻ Napas</string>
    <string name="momo">Thanh toán qua ví điện tử Momo</string>
    <string name="payment_detail_head">Chi tiết thanh toán</string>
    <string name="address_book">Sổ địa chỉ</string>
    <string name="no_voucher">Không có mã giảm giá nào.</string>
    <string name="quit_order_flow_title">Bạn có chắc muốn thoát quá trình đặt hàng?</string>
    <string name="quit_order_flow_sub">Có rất nhiều người đang muốn mua sản phẩm của bạn, đừng chần chừ.</string>
    <string name="quit">Thoát</string>
    <string name="continue_flow">Tiếp tục</string>
    <string name="title_activity_all_artist">AllArtistActivity</string>
    <string name="add_address">Tạo địa chỉ mới</string>
    <string name="pick_address">Địa chỉ nhận hàng</string>
    <string name="request_to_sign_in">Bạn vui lòng đăng nhập để thực hiện thao tác.</string>
    <string name="back">Trở về trang chủ</string>
    <string name="order_success">Bạn đã đặt hàng thành công.</string>
    <string name="view_order">Xem đơn hàng</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="benefit_01">Freeship đơn từ 500K • Hoàn trả miễn phí</string>
    <string name="benefit_02">Dự kiến nhận hàng vào Thứ </string>
    <string name="benefit_03">Tặng kèm card ngẫu nhiên</string>
    <string name="add_to_favorite_btn">Thêm vào d.sách yêu thích</string>
    <string name="year_debut">Ra mắt vào năm </string>
    <string name="view_artist_btn">Xem thông tin nghệ sĩ</string>
    <string name="product_des_headline">Chi tiết sản phẩm</string>
    <string name="product_des">* Số lượng mua tối đa cùng một lúc là 50.\n* Thành phần có thể thay đổi một chút trong quá trình sản xuất.\n* Nếu bạn thanh toán chung cho các sản phẩm đặt trước và sản phẩm thông thường, chúng sẽ được giao theo đợt theo sản phẩm đặt trước với ngày giao hàng muộn hơn.\n\nBao gồm:\n</string>
    <string name="product_list_of_artist">Sản phẩm</string>
    <string name="product_list_relevant">Sản phẩm tương tự</string>
    <string name="action_settings">Settings</string>
    <string name="btn_sign_out">Đăng xuất</string>
    <string name="btn_change_avatar">Đổi ảnh</string>
    <string name="last_name">Họ và tên lót</string>
    <string name="first_name">Tên</string>
    <string name="birthdate">Ngày sinh</string>
    <string name="sex">Giới tính</string>
    <string name="email">Email</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="btn_del_acc">Xóa tài khoản</string>
    <string name="btn_save_user_info">Xác nhận lưu thông tin</string>
    <string name="search_screen_cancel_search_text">Hủy</string>
    <string name="search_screen_highlight_artists_label">Nghệ sĩ nổi bật</string>
    <string name="search_screen_list_category_title_text">Danh mục sản phẩm</string>
    <string name="just_image">just_image</string>
    <string name="placeholder">Placeholder</string>
    <string name="search_dashboard_category_all">Tất cả</string>
    <string name="search_dashboard_category_album">Album</string>
    <string name="search_dashboard_category_photobook">Photobook</string>
    <string name="search_dashboard_category_merch">Merch</string>
    <string name="search_dashboard_category_vinyl">Vinyl</string>
    <string name="search_dashboard_category_lightstick">Lightstick</string>

    //BoardingSrcTitle
    <string name="BoardTitle1">Thoả thích đu Idol với giá ưu đãi</string>
    <string name="BoardTitle2">Miễn phí ship cho đơn hàng trên 500K</string>
    <string name="BoardTitle3">Miễn phí đổi trả cho các tình yêu</string>
    <string name="BoardTitle4">Bảo vệ môi trường là bảo vệ Idol</string>

    //BoardingSrcDecr
    <string name="BoardDes1">Tải app để dùng ngay các voucher hấp dẫn, đu Idol không mỏi mệt cùng pop4u.</string>
    <string name="BoardDes2">Chỉ cần trên 500.000VND, pop4u chiêu đãi bạn phí ship nhé!</string>
    <string name="BoardDes3">Tình yêu sẽ được đổi trả sản phẩm trong vòng 7 ngày kể từ ngày nhận hàng.</string>
    <string name="BoardDes4">Cùng pop4u bảo vệ môi trường sống cho chúng ta và cả Idol nhé!</string>
    <string name="create_account_button_title">Tạo tài khoản</string>

    //TermsAccount
    <string name="BuyTerm">Chính sách mua hàng</string>
    <string name="ShipTerm">Chính sách giao hàng</string>
    <string name="PayTerm">Chính sách thanh toán</string>
    <string name="PersonData">Dữ liệu cá nhân</string>

    //Helps and Report
    <string name="Help">Hỗ trợ giúp đỡ</string>
    <string name="Report">Báo cáo khiếu nại</string>
    <string name="skip">Bỏ qua</string>
    <string name="start">Bắt đầu</string>

    <array name="initial_slider_year">
        <item>2020</item>
        <item>2024</item>
    </array>
</resources>