<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <TextView
        android:id="@+id/txtFilterDialogTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_product"
        android:fontFamily="@font/inter_semibold"
        android:textSize="20sp"
        android:textColor="@color/md_theme_onSurface" />
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvFilterSection"
        app:layout_constraintTop_toBottomOf="@+id/txtFilterDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <TextView
                android:id="@+id/txtSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/sort_by"
                android:fontFamily="@font/inter_semibold"
                android:textSize="17.5sp"
                android:textColor="@color/md_theme_onSurface"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupSortByPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtSortBy"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                app:singleSelection="true"
                app:chipSpacingVertical="0dp">
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAscendPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:text="@string/sort_by_de_price"
                    android:fontFamily="@font/inter"
                    app:chipIcon="@drawable/arrow_downward_fill1_wght300_grad0_opsz24"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDescendPrice"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_as_price"
                    app:chipIcon="@drawable/arrow_upward_fill1_wght300_grad0_opsz24"/>
            </com.google.android.material.chip.ChipGroup>
            <TextView
                android:id="@+id/txtFilterByCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupSortByPrice"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/filter_by_category"
                android:fontFamily="@font/inter_semibold"
                android:textSize="17.5sp"
                android:textColor="@color/md_theme_onSurface" />
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupFilterByCategory"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/txtFilterByCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                app:selectionRequired="true"
                app:chipSpacingVertical="0dp">
                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:id="@+id/chipAllProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    app:chipStartPadding="15dp"
                    app:chipEndPadding="15dp"
                    android:text="@string/search_dashboard_category_all"
                    android:fontFamily="@font/inter"
                    app:chipIcon="@drawable/widgets_fill1_wght300_grad0_opsz24"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAlbum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipStartPadding="15dp"
                    app:chipEndPadding="15dp"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:text="@string/search_dashboard_category_album"
                    app:chipIcon="@drawable/library_music_fill1_wght300_grad0_opsz24"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMerch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipStartPadding="15dp"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    app:chipEndPadding="15dp"
                    android:text="@string/search_dashboard_category_photobook"
                    app:chipIcon="@drawable/art_track_fill1_wght300_grad0_opsz24"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPhotobook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipStartPadding="15dp"
                    app:chipEndPadding="15dp"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:text="@string/search_dashboard_category_vinyl"
                    app:chipIcon="@drawable/album_fill1_wght300_grad0_opsz24"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVinyl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:text="@string/search_dashboard_category_merch"
                    app:chipIcon="@drawable/package_2_fill1_wght300_grad0_opsz24"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipLightstick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipStartPadding="15dp"
                    app:chipEndPadding="15dp"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:text="@string/search_dashboard_category_lightstick"
                    app:chipIcon="@drawable/lightbulb_fill1_wght300_grad0_opsz24"/>
            </com.google.android.material.chip.ChipGroup>
            <TextView
                android:id="@+id/txtFilterByTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupFilterByCategory"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/filter_by_tag"
                android:fontFamily="@font/inter_semibold"
                android:textSize="17.5sp"
                android:textColor="@color/md_theme_onSurface"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupFilterByTag"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/txtFilterByTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                app:singleSelection="false"
                app:chipSpacingVertical="0dp">
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipHot"
                    android:layout_width="wrap_content"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:layout_height="wrap_content"
                    app:chipStartPadding="15dp"
                    app:chipEndPadding="15dp"
                    android:text="@string/filter_by_tag_hot"
                    app:chipIcon="@drawable/trending_up_fill1_wght700_grad0_opsz24"
                    app:chipIconTint="@color/md_theme_primary"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipNew"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipStartPadding="15dp"
                    app:chipEndPadding="15dp"
                    android:text="@string/filter_by_tag_new"
                    app:chipIcon="@drawable/local_fire_department_fill1_wght300_grad0_opsz24"
                    app:chipIconTint="@color/md_theme_tertiary"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipStartPadding="15dp"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    app:chipEndPadding="15dp"
                    android:text="@string/filter_by_tag_sale"
                    app:chipIcon="@drawable/confirmation_number_fill1_wght300_grad0_opsz24"
                    app:chipIconTint="@color/md_theme_error"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFeature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipStartPadding="15dp"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    app:chipEndPadding="15dp"
                    android:text="@string/filter_by_tag_featured"
                    app:chipIcon="@drawable/award_star_fill1_wght300_grad0_opsz24"
                    app:chipIconTint="@color/md_theme_primary" />
            </com.google.android.material.chip.ChipGroup>
            <TextView
                android:id="@+id/txtFilterByYearRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupFilterByTag"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/filter_by_year_release"
                android:fontFamily="@font/inter_semibold"
                android:textSize="17.5sp"
                android:textColor="@color/md_theme_onSurface"/>
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/sliderYearRangeProductRelease"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/txtFilterByYearRelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="2010"
                android:valueTo="2024"
                app:values="@array/initial_slider_year"
                android:stepSize="1"
                android:contentDescription="@string/slide_year_description"
                app:trackColorActive="@color/md_theme_primary"
                app:thumbColor="@color/md_theme_primary"
                app:trackColorInactive="@color/md_theme_surfaceContainerHighest"
                app:labelBehavior="visible"/>
            <TextView
                android:id="@+id/txtFilterByPriceRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/sliderYearRangeProductRelease"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/filter_by_price_range"
                android:fontFamily="@font/inter_semibold"
                android:textSize="17.5sp"
                android:textColor="@color/md_theme_onSurface"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupPriceRange"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/txtFilterByPriceRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                app:singleSelection="false"
                app:chipSpacingVertical="0dp">
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipUnder500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:text="@string/price_under_500K"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipUnder1K"
                    android:layout_width="wrap_content"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:layout_height="wrap_content"
                    android:text="@string/price_under_1M"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipUnder1.5K"
                    android:layout_width="wrap_content"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:layout_height="wrap_content"
                    android:text="@string/price_under_1_5M"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipUnder2K"
                    android:layout_width="wrap_content"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:layout_height="wrap_content"
                    android:text="@string/price_under_2M" />
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOver2K"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_over_2M"/>
            </com.google.android.material.chip.ChipGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_surfaceContainerLow_highContrast"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp">
        <Button
            android:id="@+id/btnApplyFilter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnResetFilter"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/apply_filter"
            android:backgroundTint="@color/md_theme_primary"
            android:fontFamily="@font/inter_semibold"
            android:textSize="17.5sp"
            android:textColor="@color/md_theme_onPrimary"/>
        <Button
            android:id="@+id/btnResetFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_filter"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/inter_semibold"
            app:strokeColor="@color/md_theme_outline"
            android:textSize="17.5sp"
            app:strokeWidth="1dp"
            android:textColor="@color/md_theme_onSurface"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>