<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <TextView
        android:id="@+id/txtFilterDialogTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_artist"
        android:fontFamily="@font/inter_semibold"
        android:textSize="20sp"
        android:textColor="@color/md_theme_onSurface" />
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvFilterSection"
        app:layout_constraintTop_toBottomOf="@+id/txtFilterDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <TextView
                android:id="@+id/txtSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/sort_by"
                android:fontFamily="@font/inter_semibold"
                android:textSize="17.5sp"
                android:textColor="@color/md_theme_onSurface"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupSortByPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtSortBy"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                app:singleSelection="true"
                app:chipSpacingVertical="0dp">
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAscendPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:text="@string/sort_by_de_price"
                    android:fontFamily="@font/inter"
                    app:chipIcon="@drawable/arrow_downward_fill1_wght300_grad0_opsz24"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDescendPrice"
                    app:chipBackgroundColor="@color/md_theme_surfaceContainerLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_as_price"
                    app:chipIcon="@drawable/arrow_upward_fill1_wght300_grad0_opsz24"/>
            </com.google.android.material.chip.ChipGroup>
            <TextView
                android:id="@+id/txtFilterByYearRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupSortByPrice"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/filter_by_year_release"
                android:fontFamily="@font/inter_semibold"
                android:textSize="17.5sp"
                android:textColor="@color/md_theme_onSurface"/>
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/sliderYearRangeProductRelease"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/txtFilterByYearRelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="2010"
                android:valueTo="2024"
                app:values="@array/initial_slider_year"
                android:stepSize="1"
                android:contentDescription="@string/slide_year_description"
                app:trackColorActive="@color/md_theme_primary"
                app:thumbColor="@color/md_theme_primary"
                app:trackColorInactive="@color/md_theme_surfaceContainerHighest"
                app:labelBehavior="visible"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctrFilterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_surfaceContainerLow_highContrast"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp">
        <Button
            android:id="@+id/btnApplyFilter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnResetFilter"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/apply_filter"
            android:backgroundTint="@color/md_theme_primary"
            android:fontFamily="@font/inter_semibold"
            android:textSize="17.5sp"
            android:textColor="@color/md_theme_onPrimary"/>
        <Button
            android:id="@+id/btnResetFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_filter"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/inter_semibold"
            app:strokeColor="@color/md_theme_outline"
            android:textSize="17.5sp"
            app:strokeWidth="1dp"
            android:textColor="@color/md_theme_onSurface"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>